--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,11 @@ jobs:
     - name: which python after python setup
       run: python --version
 
+    - name: Install required python packages
+      run: |
+        python -m pip install --upgrade pip
+        pip install numpy
+    
     - name: env after adding python
       run: env
 
