--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,11 @@ jobs:
     - name: Install required python packages
       run: |
         python -m pip install --upgrade pip
-        pip install wheel numpy scipy matplotlib mpi4py
+        pip install wheel numpy scipy matplotlib
+    
+    - name: Install mpi4py
+      run: |
+        pip install mpi4py
     
     - name: env after adding python
       run: env
