--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install wheel numpy scipy matplotlib
     
+    - name: Install mpi
+      run: |
+        sudo apt-get install libopenmpi-dev
+    
     - name: Install mpi4py
       run: |
         pip install mpi4py
