--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Install required python packages
       run: |
         python -m pip install --upgrade pip
-        pip install wheel numpy scipy matplotlib
+        pip install wheel numpy scipy matplotlib jax
     
     - name: Install mpi
       run: |
